--- a/index.html
+++ b/index.html
@@ -1,17 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content= "width=width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=width=device-width, initial-scale=1.0">
     <meta name="description" content="Love Running club for runners in Dublin, Ireland">
     <meta name="keywords" content="love running, running club, Ireland, Dublin">
 
     <link rel="stylesheet" href="assets/css/style.css">
-<title>Love Running</title>
+    <title>Love Running</title>
 </head>
+
 <body>
-    <header>Header content</header>
+    <header>
+        <a href="index.html">
+            <h1>Love Running</h1>
+        </a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="indext.html">Home</a>
+                </li>
+                <li>
+                    <a href="a">Gallery</a>
+                </li>
+                <li>
+                    <a href="a">Sign Up</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <section>
         Maine Image
     </section>
@@ -25,4 +44,5 @@
         social media links
     </footer>
 </body>
+
 </html>
