--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <h1 id="logo">Love Running</h1>
         </a>
         <nav>
-            <ul>
+            <ul id="menu">
                 <li>
-                    <a href="indext.html">Home</a>
+                    <a href="indext.html" class="active">Home</a>
                 </li>
                 <li>
                     <a href="a">Gallery</a>
